<resources>
    <string name="app_name">Runar</string>
    <string name="bottom_nav_layouts">Runic Draws</string>
    <string name="bottom_nav_library">Library</string>
    <string name="bottom_nav_favourites">Favourites</string>
    <string name="bottom_nav_menu">Menu</string>
    <string name="generator">Generator</string>
    <string name="pattern_generator">Pattern generator</string>
    <string name="run_pattern">Rune pattern</string>
    <string name="run_patterns">Rune patterns</string>
    <string name="menu">Menu</string>
    <string name="formula">Runic Formula</string>
    <string name="stav">Runic Staves</string>
    <string name="coming_soon">Coming soon</string>
    <string name="runes_selection">Runes selection</string>
    <string name="runes_collect_formula">Select 1 to 3 runes and collect your rune draw</string>
    <string name="runes_random">Choose random runes</string>
    <string name="generator_fog">Generator is covered in mist</string>
    <string name="generator_fog_desc">The wisdom of the generator is available to premium-subscribers</string>
    <string name="runes_generate">Generate</string>
    <string name="layout1">RUNE OF THE DAY</string>
    <string name="layout2">2 RUNES</string>
    <string name="layout3">NORNS</string>
    <string name="layout4">BRIEF PROPHECY</string>
    <string name="layout5">THOR\'S HAMMER</string>
    <string name="layout6">CROSS</string>
    <string name="layout7">CROSS OF ELEMENTS</string>
    <string name="layout8">CELTIC CROSS</string>
    <string name="layout_upper_banner_description">Create your runic pattern by selecting a few runes</string>
    <string name="rune_layouts">Rune layouts</string>
    <string name="layout_description_checkbox">Do not show again</string>
    <string name="layout_description_button">Start Runic Draw</string>
    <string name="layout_init_button_text1">Pull Out a Rune</string>
    <string name="layout_init_button_text2">Get Interpretation</string>
    <string name="layout_init_button_text4">Processing…</string>
    <string name="layout_init_processing">Ravendark Guitars</string>
    <string name="layout_description_product">Products description</string>
    <string name="layout_go_to_site">Check the website</string>
    <string name="info_popup_button_text">Ок</string>
    <string name="description_runic_draws_popup">Do you really want to stop\nRunic Draw?</string>
    <string name="description_generator_popup">Do you really want to stop\nGenerator?</string>
    <string name="description_popup_button1">No</string>
    <string name="description_popup_button2">Yes</string>
    <string name="layout_interpretation_checkbox">Save this draw</string>
    <string name="layout_interpretation_button">Finish</string>
    <string name="layout_interpretation_ausf">Luckiness</string>
    <string name="text_calculation_helper">The fame and popularity of this divination </string>
    <string name="settings_layout">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_rus" translatable="false">Русский</string>
    <string name="settings_language_en" translatable="false">English</string>
    <string name="music_txt">Music</string>
    <string name="onboarding_txt">Show onboard page</string>
    <string name="rate_app_txt">Rate the application</string>
    <string name="about_app_txt">About</string>
    <string name="developer_options_title">Developer Options</string>
    <string name="about_txt">Application version 0.14–5\n\nRunar is an app for reading Scandinavian runes and studying mythology and fairy tales. Contains 8 types of rune layouts and runes interpretation. In the Library section you can read Scandinavian sagas and fairy tales.\n\nWith the permission of the copyright holders, the following musical compositions are used in the application:\n- Lyod (tracks \"Black rook\", \"My mother told\"), https://lyod1.bandcamp.com/releases \n- Danheim (tracks \"Runar\", \"Kala\"), https://danheimmusic.com</string>
    <string name="library_top_bar_header">Library</string>
    <string name="fav_dialog_text">Do you really want to delete your favorite layouts?</string>
    <string name="library_bar_fav">Favourites</string>
    <string name="fav_checkbox_text">Select all</string>
    <string name="about_url1">https://lyod1.bandcamp.com/releases</string>
    <string name="about_url2">https://danheimmusic.com/license-music/</string>
    <string name="group1">Lyod</string>
    <string name="group2">Danheim</string>
    <string name="track1_1">Black rook</string>
    <string name="track1_2">My mother told</string>
    <string name="track2_1">Kala</string>
    <string name="track2_2">Runar</string>
    <string name="helper_text">Tap on the runic draw,\n and learn the details about the runes</string>
    <string name="onboard_skip">Skip</string>
    <string name="onboard_begin">Start</string>
    <string name="onboard_next">Next</string>
    <string name="onboard_header1">What the app is about</string>
    <string name="onboard_text1">Get answers to exciting questions with the help of runes</string>
    <string name="onboard_header2">How to read runes</string>
    <string name="onboard_text2">Choose one of the eight divinations and see the interpretation of your fate</string>
    <string name="onboard_header3">Interpretation</string>
    <string name="onboard_text3">See the interpretation of each divination with the luckiness level</string>
    <string name="onboard_header4">Favourites</string>
    <string name="onboard_text4">Save your favourite interpretations and meanings of runes to your Favourites</string>
    <string name="onboard_header5">Generator</string>
    <string name="onboard_text5">Forge your own destiny, collect a rune pattern and choose a background for it</string>
    <string name="onboard_header6">Library</string>
    <string name="onboard_text6">Go to the Library of Knowledge, learn fairy tales, mythology and the history of runes</string>
    <string name="sacr_button_header">Принести жертву богам</string>
    <string name="sacr_button_text">Активация и поддержка новых фичей, и креативных идей.</string>
    <string name="sacr_header_1">Жертва Богам</string>
    <string name="sacr_header_2">Свершилось</string>
    <string name="sacr_sub_header">Принести в жертву</string>
    <string name="sacr_text">Жертва Богам повышает ваш уровень удачи и увеличивает возможность благоприятного исхода ваших дел.\n\nДелая жертву Богам, сфокусируйте свой разум на проблеме или деяниях своих. И Боги обратят на вас свой взор, одаряя вас внутренней силой и упорством на пути к вашей цели.\nПосле чего сама Судьба проведёт вас за руку по тропе благополучия.</string>
    <string name="sacr_item_1">Бить челом</string>
    <string name="sacr_item_2">Кофе</string>
    <string name="sacr_item_3">Эль</string>
    <string name="sacr_button2_price">$2</string>
    <string name="sacr_button3_price">$5</string>
    <string name="sacr_hint_text">You’ll be charged</string>
    <string name="sacr_google_pay_text">You’ll be taken to a thank you page after the payment. By continuing, you agree to the terms and privacy police.</string>
    <string name="sacr_last_button_text">Продолжить путь</string>
    <string name="sacr_result_text">Жертва принесена, и Боги обратили на тебя свой взор. Теперь продолжи свой путь!</string>
    <string name="generatorBackground">Select background</string>
    <string name="text_magic_happens">Magic happens</string>
    <string name="fate_created">Template is creating … </string>
    <string name="do_not_despair">Do not despair if today the runes do not tell you fate, but then you will need to choose .....</string>
    <string name="runic_pattern">Runic pattern</string>
    <string name="text_for_viking">Next, choose a background for it, viking</string>
    <string name="pattern_created">Pattern created</string>
    <string name="new_option">See more</string>
    <string name="next">Next</string>
    <string name="background_generator">To get started, choose your favorite picture</string>
    <string name="image_saved">Runic pattern is saved</string>
    <string name="permission_denied">Storage access denied</string>
    <string name="library_tab_books">Books</string>
    <string name="library_tab_audio">Audio</string>
    <string name="push_general_notification">Just open Runar and find out what’s the rune of the day</string>
    <string name="push_general_notification_channel_name">Reminders</string>
    <string name="heading" translatable="false">Heading</string>
    <string name="some_description" translatable="false">Some Description</string>
    <string name="luck_is_close">A little more, and you\'ll catch up the luck!</string>
    <string name="today_your_day">Hey, it\'s your lucky day!</string>
    <string name="lucky">The gods favor you!</string>
    <string name="luck_next_time">Better luck next time!</string>
    <string name="retry">Retry</string>
    <string name="internet_conn_error">Please check your network connection and try again</string>
    <string name="internet_conn_error1">No internet connection</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="subsription">Subscription</string>
    <string name="runar_premium">Runar premium</string>
    <string name="get_a_full_access">Get a full access to Runar</string>
    <string name="all_runic_draws">All runic draws</string>
    <string name="all_runes_description">All runes description</string>
    <string name="audio_library">Audio library</string>
    <string name="runic_patterns_generator">Runic patterns generator</string>
    <string name="choose_payment_plan">Choose a payment plan</string>
    <string name="pay">Pay the plan</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_title"> Privacy Policy </string>
    <string name="privacy_policy_title_2">Privacy Policy</string>
    <string name="terms_of_use_title">Terms of use</string>
    <string name="restore">Restore</string>
    <string name="conditions">Conditions</string>
    <string name="last_update">Last updated July 27, 2022</string>
    <string name="conditions_notifications">This privacy notice for Runar App (\&quot;Company\&quot;, \&quot;we\&quot;, \&quot;us\&quot;, or \&quot;our\&quot;), describes how and why we might collect, store, use, and/or share ("process") your information when you use our Application ("The App"), such as when you:\n- Download and use our mobile application (Runar App), or any other application of ours (Services) that links to this privacy notice\n- Engage with us in other related ways, including any sales, marketing, or events.</string>
    <string name="terms_of_use_predesc">Please read these terms and conditions carefully before using Our Service (Runar App).</string>
    <string name="terms_of_use_definitions">Definitions</string>
</resources>