<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fire"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/rune_pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pattern_created"
        android:fontFamily="@font/amatic_sc_bold"
        android:textColor="@color/layout_desc_deselected"
        android:textSize="36sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/text_inform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_for_viking"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white_transparent70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rune_pattern"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.044" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.956" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1875" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.822" />

    <TextView
        android:id="@+id/button_select"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:gravity="center_horizontal"
        android:fontFamily="@font/amatic_sc_bold"
        app:autoSizeTextType="uniform"
        android:background="@drawable/next_type"
        android:textColor="@color/layout_desc_deselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lineEnd"
        app:layout_constraintStart_toStartOf="@+id/lineStart"
        app:layout_constraintTop_toTopOf="@+id/lineBottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/my_background_pattern"
        app:layout_constraintBottom_toBottomOf="@+id/lineBottom"
        app:layout_constraintEnd_toEndOf="@+id/lineEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lineStart"
        app:layout_constraintTop_toTopOf="@+id/lineTop"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineImgStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineImgEnd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineImgTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.118" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineImgBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <ImageView
            android:id="@+id/imageRune"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/lineImgBottom"
            app:layout_constraintEnd_toEndOf="@+id/lineImgEnd"
            app:layout_constraintStart_toStartOf="@+id/lineImgStart"
            app:layout_constraintTop_toTopOf="@+id/lineImgTop"
            tools:srcCompat="@tools:sample/avatars" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:indeterminateTint="#EFCD93"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/lineImgBottom"
            app:layout_constraintEnd_toEndOf="@+id/lineImgEnd"
            app:layout_constraintStart_toStartOf="@+id/lineImgStart"
            app:layout_constraintTop_toTopOf="@+id/lineImgTop"/>

        <TextView
            android:id="@+id/next_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/new_option"
            android:textColor="@color/layout_desc_deselected"
            android:textSize="24sp"
            android:gravity="center"
            android:background="@drawable/next_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lineImgEnd"
            app:layout_constraintStart_toStartOf="@+id/lineImgStart"
            app:layout_constraintTop_toTopOf="@+id/lineImgBottom"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>