<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/library_top_bar"
        app:subtitleTextAppearance="@font/roboto_medium"
        app:title="@string/pattern_generator"
        app:titleTextColor="@color/library_top_bar_header"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineTop_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.125" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineBottom_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.531" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.138" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.862" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineCenterVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.854" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineBottom_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.693" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/generatorStav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@+id/lineEnd"
        app:layout_constraintStart_toStartOf="@id/lineStart"
        app:layout_constraintTop_toTopOf="@+id/lineTop_1"
        app:layout_constraintBottom_toBottomOf="@+id/lineBottom_1"
        android:background="@drawable/layout_item_selector_background"
        android:onClick="generatorStart">

        <TextView
            app:maxLines="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="5sp"
            android:letterSpacing="@dimen/layout_text_letter_spacing"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/run_pattern"
            android:textColor="@color/layout_desc_deselected"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/rune_patern"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formula"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/layout_item_selector_background"
        app:layout_constraintBottom_toBottomOf="@+id/lineBottom"
        app:layout_constraintEnd_toEndOf="@+id/lineCenterVertical"
        app:layout_constraintStart_toStartOf="@id/lineStart"
        app:layout_constraintTop_toBottomOf="@+id/lineBottom_2">

        <TextView
            android:id="@+id/formula_screen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:letterSpacing="@dimen/layout_text_letter_spacing"
            android:text="@string/formula"
            android:textColor="@color/layout_desc_deselected"
            android:textSize="16sp"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxLines="1" />

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/formula"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formula_screen" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/layout_item_selector_background"
        app:layout_constraintBottom_toBottomOf="@id/lineBottom"
        app:layout_constraintEnd_toEndOf="@+id/lineEnd"
        app:layout_constraintTop_toTopOf="@+id/lineBottom_2"
        app:layout_constraintStart_toStartOf="@id/lineCenterVertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/stav_screen"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:letterSpacing="@dimen/layout_text_letter_spacing"
            android:text="@string/stav"
            android:textColor="@color/layout_desc_deselected"
            android:textSize="16sp"
            app:autoSizeMinTextSize="5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxLines="1" />

        <ImageView
            android:adjustViewBounds="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/stav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stav_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_bold"
        android:letterSpacing="@dimen/layout_text_letter_spacing"
        android:text="@string/coming_soon"
        android:textColor="@color/layout_desc_deselected"
        android:textSize="24sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/lineBottom_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineBottom_1"
        app:maxLines="1" />


</androidx.constraintlayout.widget.ConstraintLayout>