<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.GeneratorBackground">

    <com.tnco.runar.ui.component.view.OffsetImageView
        android:id="@+id/offsetImageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:src="@drawable/background_fire"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextAppearance="@font/roboto_medium"
        app:titleTextColor="@color/library_top_bar_header"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_library_back_arrow_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/generatorBackground"
            android:textColor="@color/library_top_bar_header"
            android:textSize="36sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textSelectBackground"
        android:visibility="visible"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/background_generator"
        android:fontFamily="@font/amatic_sc_bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="23.5dp"
        android:layout_marginStart="23.5dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/backgroundImgRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSelectBackground"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="22dp">

    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.044" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.956" />

    <TextView
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/generator_button_background_deselected"
        android:fontFamily="@font/amatic_sc_bold"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/next"
        android:textColor="@color/background_next"
        android:visibility="gone"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineEnd"
        app:layout_constraintStart_toStartOf="@+id/lineStart" />

    <ProgressBar
        android:id="@+id/generatorProgressBar"
        android:layout_margin="60dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleY="1.0"
        android:max="100"
        android:indeterminateTint="#EFCD93"
        android:indeterminate="true"
        android:progressDrawable="@drawable/splsh_screen_process_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>